# ganesha-blue

./: CMakeLists.txt  README.md  example1.cpp  ganesha.hpp
clionShadow/: CMakeLists.txt
